Remove default texts.

--- a/software/modules/frontend/debug/navbar.html
+++ b/software/modules/frontend/debug/navbar.html
@@ -2,6 +2,6 @@
     <a id="sidebar-debug" class="nav-link" data-toggle="tab" role="tab" aria-controls="debug"
         aria-selected="true" href="#debug" hidden>
         <span data-feather="terminal"></span>
-        <span data-i18n="debug.navbar.debug">Debug</span>
+        <span data-i18n="debug.navbar.debug"></span>
     </a>
 </li>
