--- a/software/modules/frontend/firmware_update/navbar.html
+++ b/software/modules/frontend/firmware_update/navbar.html
@@ -2,6 +2,6 @@
     <a id="sidebar-flash" class="nav-link" data-toggle="tab" role="tab" aria-controls="flash"
         aria-selected="true" href="#flash" hidden>
         <span data-feather="settings"></span>
-        <span data-i18n="firmware_update.navbar.system">Firmware</span>
+        <span data-i18n="firmware_update.navbar.system"></span>
     </a>
 </li>
