--- a/software/modules/frontend/mqtt/navbar.html
+++ b/software/modules/frontend/mqtt/navbar.html
@@ -2,6 +2,6 @@
     <a id="sidebar-mqtt" class="nav-link" data-toggle="tab" role="tab" aria-controls="mqtt"
         aria-selected="true" href="#mqtt" hidden>
         <span data-feather="rss"></span>
-        <span data-i18n="mqtt.navbar.mqtt">MQTT</span>
+        <span data-i18n="mqtt.navbar.mqtt"></span>
     </a>
 </li>
