--- a/software/modules/frontend/debug/content.html
+++ b/software/modules/frontend/debug/content.html
@@ -1,13 +1,13 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-debug" id="debug">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="debug.content.debug">Debug</h1>
+        <h1 class="h2" data-i18n="debug.content.debug"></h1>
     </div>
 
     <div class="form-group row">
         <div class="col-sm-4">
             <label for="debug_uptime" class="col-form-label">
-                <span class="form-label" data-i18n="debug.content.uptime">Uptime</span>
+                <span class="form-label" data-i18n="debug.content.uptime"></span>
             </label>
         </div>
         <div class="col-sm-4">
@@ -18,7 +18,7 @@
     <div class="form-group row">
         <div class="col-sm-4">
             <label for="debug_heap_free" class="col-form-label">
-                <span class="form-label" data-i18n="debug.content.heap_free">Free heap bytes</span>
+                <span class="form-label" data-i18n="debug.content.heap_free"></span>
             </label>
         </div>
         <div class="col-sm-4">
@@ -29,7 +29,7 @@
     <div class="form-group row">
         <div class="col-sm-4">
             <label for="debug_heap_block" class="col-form-label">
-                <span class="form-label" data-i18n="debug.content.heap_block">Largest free heap block</span>
+                <span class="form-label" data-i18n="debug.content.heap_block"></span>
             </label>
         </div>
         <div class="col-sm-4">
