--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -1,14 +1,14 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-flash" id="flash">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="firmware_update.content.system">Firmware</h1>
+        <h1 class="h2" data-i18n="firmware_update.content.system"></h1>
     </div>
 
     <form method='POST' action='#' enctype='multipart/form-data' id='upload_firmware_form'>
         <div class="form-group row">
             <div class="col-lg-3 mt-2">
                 <input class="form-control mb-1" type="text" placeholder="..." readonly id="current_firmware">
-                <label for='current_firmware' data-i18n="firmware_update.content.current_firmware">Current Firmware</label>
+                <label for='current_firmware' data-i18n="firmware_update.content.current_firmware">/label>
             </div>
 
             <div class="col-lg-6 mt-2">
@@ -17,14 +17,14 @@
                         <input name="firmware" type="file" class="custom-file-input form-control"
                             id="firmware_file_select">
                         <label class="custom-file-label form-control"
-                            for="firmware_file_select" data-browse="Browse" data-i18n="firmware_update.content.browse firmware_update.content.select_file" data-i18n-attr="data-browse innerHTML">Select File</label>
+                            for="firmware_file_select" data-browse="" data-i18n="firmware_update.content.browse firmware_update.content.select_file" data-i18n-attr="data-browse innerHTML"></label>
                     </div>
                     <div class="input-group-append">
-                        <input id="update_firmware_button" type='submit'  data-i18n="firmware_update.content.update" data-i18n-attr="value" value="Update"
+                        <input id="update_firmware_button" type='submit'  data-i18n="firmware_update.content.update" data-i18n-attr="value" value=""
                             class="btn btn-primary form-control" disabled>
                     </div>
                 </div>
-                <label id="firmware_label" for='firmware_file_select' data-i18n="firmware_update.content.firmware_update">Firmware Update</label>
+                <label id="firmware_label" for='firmware_file_select' data-i18n="firmware_update.content.firmware_update"></label>
             </div>
             <div class="col-lg-3 mt-2" id="firmware-progress" hidden>
                 <div class="form-progress mb-1">
@@ -32,7 +32,7 @@
                         role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                         aria-valuemax="100"></div>
                 </div>
-                <label for='firmware-progress-bar' data-i18n="firmware_update.content.uploading">Uploading Firmware...</label>
+                <label for='firmware-progress-bar' data-i18n="firmware_update.content.uploading"></label>
             </div>
         </div>
     </form>
@@ -41,31 +41,31 @@
         <div class="form-group row">
             <div class="col-lg-3 mt-2">
                 <input class="form-control mb-1" type="text" placeholder="..." readonly id="current_spiffs">
-                <label for='current_spiffs' data-i18n="firmware_update.content.current_spiffs">Current SPIFFS</label>
+                <label for='current_spiffs' data-i18n="firmware_update.content.current_spiffs"></label>
             </div>
 
             <div class="col-lg-3 mt-2">
-                <button id="spiffs_factory_reset" type="button" class="form-control btn btn-danger mb-1" data-i18n="firmware_update.content.factory_reset">Factory Reset</button>
-                <label id="spiffs_label" for='spiffs_factory_reset' data-i18n="firmware_update.content.factory_reset_desc">Reset all settings to factory default</label>
+                <button id="spiffs_factory_reset" type="button" class="form-control btn btn-danger mb-1" data-i18n="firmware_update.content.factory_reset"></button>
+                <label id="spiffs_label" for='spiffs_factory_reset' data-i18n="firmware_update.content.factory_reset_desc"></label>
             </div>
 
             <div class="col-lg-3 mt-2">
-                <a id="download_debug_report" href="/debug_report" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.debug_report" download="debug_report.txt">Download Debug Report</a>
-                <label id="spiffs_label" for='debug_report' data-i18n="firmware_update.content.debug_report_desc">A complete report of all status information of this device except passwords.</label>
+                <a id="download_debug_report" href="/debug_report" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.debug_report" download="debug_report.txt"></a>
+                <label id="spiffs_label" for='debug_report' data-i18n="firmware_update.content.debug_report_desc"></label>
             </div>
         </div>
     </form>
     <hr>
     <div class="form-group row">
         <div class="col-lg-12 col-xl-3">
-            <button id="load_event_log" type="button" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.load_event_log">Factory Reset</button>
-            <label for='load_event_log' data-i18n="firmware_update.content.load_event_log_desc">Reset all settings to factory default</label>
-            <a id="save_event_log" href="/event_log" class="form-control btn btn-primary mt-2 mb-1" data-i18n="firmware_update.content.save_event_log" download="event_log.txt">Download Event Log</a>
-            <label for='save_event_log' data-i18n="firmware_update.content.save_event_log_desc" class="mb-3">A complete report of all status information of this device except passwords.</label>
+            <button id="load_event_log" type="button" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.load_event_log"></button>
+            <label for='load_event_log' data-i18n="firmware_update.content.load_event_log_desc"></label>
+            <a id="save_event_log" href="/event_log" class="form-control btn btn-primary mt-2 mb-1" data-i18n="firmware_update.content.save_event_log" download="event_log.txt"></a>
+            <label for='save_event_log' data-i18n="firmware_update.content.save_event_log_desc" class="mb-3"></label>
         </div>
         <div class="col-lg-12 col-xl-6">
             <textarea class="text-monospace mb-1" placeholder="Event-Log..." readonly id="event_log" rows="10" style="width: 100%; white-space: pre;" data-i18n="firmware_update.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
-            <label for='event_log' data-i18n="firmware_update.content.event_log">Event Log</label>
+            <label for='event_log' data-i18n="firmware_update.content.event_log"></label>
         </div>
     </div>
 
@@ -73,19 +73,17 @@
         <div id="factory_reset_content" class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <form-label class="modal-title" data-i18n="firmware_update.content.factory_reset">Factory Reset</form-label>
+                    <form-label class="modal-title" data-i18n="firmware_update.content.factory_reset"></form-label>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body"  data-i18n="firmware_update.content.factory_reset_modal_text">
-                    A factory reset will reset all settings to their default values. <b>This action cannot be undone!</b> The wallbox will re-open the WiFi access point with the default SSID and passphrase. Are you sure?
-                </div>
+                <div class="modal-body"  data-i18n="firmware_update.content.factory_reset_modal_text"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary"
-                        data-dismiss="modal" data-i18n="firmware_update.content.abort_reset">Abort</button>
+                        data-dismiss="modal" data-i18n="firmware_update.content.abort_reset"></button>
                     <button id="factory_reset_confirm" type="button"
-                        class="btn btn-danger" data-i18n="firmware_update.content.confirm_reset">Reset to factory defaults</button>
+                        class="btn btn-danger" data-i18n="firmware_update.content.confirm_reset"></button>
                 </div>
             </div>
         </div>
