--- a/software/modules/frontend/proxy/content.html
+++ b/software/modules/frontend/proxy/content.html
@@ -1,16 +1,16 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-bricklets" id="bricklets">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="proxy.content.bricklets">Bricklets</h1>
+        <h1 class="h2" data-i18n="proxy.content.bricklets"></h1>
     </div>
     <div class="no-gutters">
         <div class="table-responsive col-lg-6">
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col" data-i18n="proxy.content.port">Port</th>
-                        <th scope="col" data-i18n="proxy.content.UID">UID</th>
-                        <th scope="col" data-i18n="proxy.content.device_type">Device Type</th>
+                        <th scope="col" data-i18n="proxy.content.port"></th>
+                        <th scope="col" data-i18n="proxy.content.UID"></th>
+                        <th scope="col" data-i18n="proxy.content.device_type"></th>
                     </tr>
                 </thead>
                 <tbody id=bricklets_content">
@@ -19,17 +19,17 @@
             </table>
         </div>
     </div>
-    <h4 data-i18n="proxy.content.error_counters">Error Counters</h4>
+    <h4 data-i18n="proxy.content.error_counters"></h4>
     <div class="no-gutters">
         <div class="table-responsive col-lg-6">
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col" data-i18n="proxy.content.port">Port</th>
-                        <th scope="col" data-i18n="proxy.content.spitfp_checksum">SPI TFP Checksum</th>
-                        <th scope="col" data-i18n="proxy.content.spitfp_frame">SPI TFP Frame</th>
-                        <th scope="col" data-i18n="proxy.content.tfp_frame">TFP Frame</th>
-                        <th scope="col" data-i18n="proxy.content.tfp_unexpected">TFP Unexpected</th>
+                        <th scope="col" data-i18n="proxy.content.port"></th>
+                        <th scope="col" data-i18n="proxy.content.spitfp_checksum"></th>
+                        <th scope="col" data-i18n="proxy.content.spitfp_frame"></th>
+                        <th scope="col" data-i18n="proxy.content.tfp_frame"></th>
+                        <th scope="col" data-i18n="proxy.content.tfp_unexpected"></th>
                     </tr>
                 </thead>
                 <tbody id=bricklets_error_counters">
