--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -1,7 +1,7 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-wifi-sta" id="wifi-sta">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="wifi.content.sta_settings">WiFi Client Settings</h1>
+        <h1 class="h2" data-i18n="wifi.content.sta_settings"></h1>
     </div>
     <form id="wifi_sta_form" class="needs-validation" novalidate>
         <!--
@@ -11,30 +11,28 @@
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_sta_enable_sta" class="col-form-label form-label" data-i18n="wifi.content.sta_enable_sta">Enable connection to Access Point</label>
+                <label for="wifi_sta_enable_sta" class="col-form-label form-label" data-i18n="wifi.content.sta_enable_sta"></label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <div class="borderless-form-control custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="wifi_sta_enable_sta">
-                    <label class="custom-control-label" for="wifi_sta_enable_sta" data-i18n="wifi.content.sta_enable_sta_desc">
-                        Blah blah blah
-                    </label>
+                    <label class="custom-control-label" for="wifi_sta_enable_sta" data-i18n="wifi.content.sta_enable_sta_desc"></label>
                 </div>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="wifi_sta_ssid"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ssid">Network name (SSID)</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ssid"></label>
             <div class="col-lg-9 col-xl-6 input-group">
                 <input id="wifi_sta_ssid" class="form-control" type="text" maxlength="32" required>
                 <div id="scan_wifi_dropdown" class="input-group-append dropdown">
-                    <button id="scan_wifi_button" class="form-control btn btn-primary rounded-right dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-i18n="wifi.content.sta_scan" style="color: white !important;">Scan for Networks</button>
+                    <button id="scan_wifi_button" class="form-control btn btn-primary rounded-right dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-i18n="wifi.content.sta_scan" style="color: white !important;"></button>
                     <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="dropdownMenuButton" style="box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);">
-                        <h6 id="wifi_scan_title" class="dropdown-header" data-i18n="wifi.content.sta_scanning">Scanning for Access Points...</h6>
+                        <h6 id="wifi_scan_title" class="dropdown-header" data-i18n="wifi.content.sta_scanning"></h6>
                         <div id="wifi_config_scan_spinner" class="text-center">
                             <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
-                                <span class="sr-only" data-i18n="wifi.content.sta_scanning">Scanning...</span>
+                                <span class="sr-only" data-i18n="wifi.content.sta_scanning"></span>
                             </div>
                         </div>
                         <div id="wifi_scan_results" hidden>
@@ -47,7 +45,7 @@
 
         <div class="form-group row">
             <label for="wifi_sta_bssid"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_bssid">BSSID</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_bssid"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_sta_bssid" class="form-control" type="text" pattern="([0-9a-fA-F]{2}:){5}[0-9a-fA-F]{2}" required>
                 <div class="invalid-feedback"  data-i18n="wifi.content.sta_bssid_invalid"></div>
@@ -56,7 +54,7 @@
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_sta_bssid_lock" class="col-form-label form-label" data-i18n="wifi.content.sta_bssid_lock">BSSID Lock</label>
+                <label for="wifi_sta_bssid_lock" class="col-form-label form-label" data-i18n="wifi.content.sta_bssid_lock"></label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <div class="borderless-form-control custom-control custom-switch">
@@ -69,23 +67,24 @@
         </div>
 
         <div class="form-group row" id="wifi_cfg_passphrase_form">
-            <label for="wifi_sta_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_passphrase">Passphrase</label>
+            <label for="wifi_sta_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_passphrase"></label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
                     <input type="password" id="wifi_sta_passphrase" class="form-control" value="" placeholder="" data-i18n="wifi.content.unchanged" data-i18n-attr="placeholder" minlength="8" maxlength="63"/>
                     <div class="input-group-append">
                         <div class="input-group-text custom-control custom-switch" style="padding-left: 2.5rem;">
                             <input id="wifi_sta_show_passphrase" type="checkbox" class="custom-control-input" aria-label="Show password" value="test">
-                            <label class="custom-control-label" for="wifi_sta_show_passphrase" data-i18n="wifi.content.sta_show_passphrase">Show passphrase</label>
+                            <label class="custom-control-label" for="wifi_sta_show_passphrase" data-i18n="wifi.content.sta_show_passphrase"></label>
                         </div>
                     </div>
+                    <div class="invalid-feedback" data-i18n="wifi.content.sta_passphrase_invalid"></div>
                 </div>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="wifi_sta_hostname"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_hostname">Hostname</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_hostname"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_sta_hostname" class="form-control" type="text"  pattern="[a-zA-Z0-9\-]*" maxlength="63" required>
                 <div class="invalid-feedback"  data-i18n="wifi.content.sta_hostname_invalid"></div>
@@ -93,12 +92,12 @@
         </div>
 
         <div class="form-group row">
-            <label for="wifi_sta_show_static" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ip_configuration">IP Configuration</label>
+            <label for="wifi_sta_show_static" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ip_configuration"></label>
 
             <div class="col-lg-9 col-xl-6">
                 <select id="wifi_sta_show_static" class="custom-select">
-                    <option value="hide" selected data-i18n="wifi.content.sta_dhcp">Automatic (DHCP)</option>
-                    <option value="show" data-i18n="wifi.content.sta_static">Static</option>
+                    <option value="hide" selected data-i18n="wifi.content.sta_dhcp"></option>
+                    <option value="show" data-i18n="wifi.content.sta_static"></option>
                 </select>
             </div>
         </div>
@@ -137,7 +136,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="wifi_sta_dns" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.dns"></label>
+                <label for="wifi_sta_dns" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.dns"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_dns" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -147,7 +146,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="wifi_sta_dns2" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.dns2"></label>
+                <label for="wifi_sta_dns2" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.dns2"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_dns2" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -158,7 +157,7 @@
         </div>
         <div class="form-group row">
             <div class="col-lg-12 col-xl-8 text-right">
-                <button id="wifi_sta_save_button" type="submit" form="wifi_sta_form" class="btn btn-primary" data-i18n="wifi.content.save">Save</button>
+                <button id="wifi_sta_save_button" type="submit" form="wifi_sta_form" class="btn btn-primary" data-i18n="wifi.content.save"></button>
             </div>
         </div>
     </form>
@@ -168,24 +167,24 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-wifi-ap" id="wifi-ap">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="wifi.content.ap_settings">WiFi Access Point Settings</h1>
+        <h1 class="h2" data-i18n="wifi.content.ap_settings"></h1>
     </div>
     <form id="wifi_ap_form" class="needs-validation" novalidate>
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_ap_enable_ap" class="col-form-label" data-i18n="wifi.content.ap_enable">Enable Access Point</label>
+                <label for="wifi_ap_enable_ap" class="col-form-label" data-i18n="wifi.content.ap_enable"></label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <select id="wifi_ap_enable_ap" class="custom-select">
-                    <option value="0" data-i18n="wifi.content.ap_enabled">Access Point enabled</option>
-                    <option value="1" data-i18n="wifi.content.ap_fallback_only">Access Point as fallback only</option>
-                    <option value="2" data-i18n="wifi.content.ap_disabled">Access Point disabled</option>
+                    <option value="0" data-i18n="wifi.content.ap_enabled"></option>
+                    <option value="1" data-i18n="wifi.content.ap_fallback_only"></option>
+                    <option value="2" data-i18n="wifi.content.ap_disabled"></option>
                 </select>
             </div>
         </div>
         <div class="form-group row">
             <label for="wifi_ap_ssid"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ssid">Network name (SSID)</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ssid"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_ssid" class="form-control" type="text" maxlength="32" required>
             </div>
@@ -193,7 +192,7 @@
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_ap_hide_ssid" class="col-form-label form-label" data-i18n="wifi.content.ap_hide_ssid">Hide SSID</label>
+                <label for="wifi_ap_hide_ssid" class="col-form-label form-label" data-i18n="wifi.content.ap_hide_ssid"></label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <div class="borderless-form-control custom-control custom-switch">
@@ -206,14 +205,14 @@
         </div>
 
         <div class="form-group row" id="wifi_cfg_passphrase_form">
-            <label for="wifi_ap_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_passphrase">Passphrase</label>
+            <label for="wifi_ap_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_passphrase"></label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
                     <input type="password" id="wifi_ap_passphrase" class="form-control" value="" placeholder="" data-i18n="wifi.content.unchanged" data-i18n-attr="placeholder" minlength="8" maxlength="63"/>
                     <div class="input-group-append">
                         <div class="input-group-text custom-control custom-switch" style="padding-left: 2.5rem;">
                             <input id="wifi_ap_show_passphrase" type="checkbox" class="custom-control-input" aria-label="Show password" value="test">
-                            <label class="custom-control-label" for="wifi_ap_show_passphrase" data-i18n="wifi.content.ap_show_passphrase">Show passphrase</label>
+                            <label class="custom-control-label" for="wifi_ap_show_passphrase" data-i18n="wifi.content.ap_show_passphrase"></label>
                         </div>
                     </div>
                 </div>
@@ -222,7 +221,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_hostname"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_hostname">Hostname</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_hostname"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_hostname" class="form-control" type="text" pattern="[a-zA-Z0-9\-]*" maxlength="63" required>
                 <div class="invalid-feedback"  data-i18n="wifi.content.ap_hostname_invalid"></div>
@@ -231,7 +230,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_channel"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_channel"><span class="form-label">Channel</span><span class="text-muted">ignored if connected to another AP</span></label>
+                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_channel"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_channel" class="form-control" type="number" min="1" max="13" required>
             </div>
@@ -239,41 +238,40 @@
 
         <div class="form-group row">
             <label for="wifi_ap_ip"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ip">IP</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ip"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_ip" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
-                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$">
+                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$" required>
                 <div class="invalid-feedback" data-i18n="wifi.content.ap_ip_invalid"></div>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="wifi_ap_subnet"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_subnet">Subnet Mask</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_subnet"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_subnet" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
-                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$">
+                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$" required>
                 <div class="invalid-feedback"  data-i18n="wifi.content.ap_subnet_invalid"></div>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="wifi_ap_gateway"
-                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_gateway">Gateway</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_gateway"></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_gateway" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
-                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$">
+                    pattern="^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$" required>
                 <div class="invalid-feedback" data-i18n="wifi.content.ap_gateway_invalid">
-                    ${__("wifi.script.static_gateway_invalid")}
                 </div>
             </div>
         </div>
         <div class="form-group row">
             <div class="col-lg-12 col-xl-8 text-right">
-                <button id="wifi_ap_save_button" type="submit" form="wifi_ap_form" class="btn btn-primary" data-i18n="wifi.content.save">Save</button>
+                <button id="wifi_ap_save_button" type="submit" form="wifi_ap_form" class="btn btn-primary" data-i18n="wifi.content.save"></button>
             </div>
         </div>
     </form>
@@ -284,20 +282,18 @@
         class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <form-label class="modal-title" data-i18n="wifi.content.reboot_title">Reboot to apply configuration</form-label>
+                <form-label class="modal-title" data-i18n="wifi.content.reboot_title"></form-label>
                 <button type="button" class="close" data-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body" data-i18n="wifi.content.reboot_content">
-                To apply the changed WiFi configuration, the ESP has to be rebooted. Reboot now?
-            </div>
+            <div class="modal-body" data-i18n="wifi.content.reboot_content"></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary"
-                    data-dismiss="modal" data-i18n="wifi.content.abort">Abort</button>
+                    data-dismiss="modal" data-i18n="wifi.content.abort"></button>
                 <button id="wifi_reboot_button" type="button"
-                    class="btn btn-danger" data-i18n="wifi.content.reboot">Reboot</button>
+                    class="btn btn-danger" data-i18n="wifi.content.reboot"></button>
             </div>
         </div>
     </div>
