--- a/software/modules/frontend/wifi/status.html
+++ b/software/modules/frontend/wifi/status.html
@@ -1,15 +1,15 @@
 <div class="form-group row no-gutters">
     <div class="col-sm-4">
         <label for="wifi_sta_not_configured" class="col-form-label">
-            <span class="form-label pr-2" id="wifi_sta_connection_name" data-i18n="wifi.status.wifi_connection">WiFi Connection </span><span class="text-muted" id="status_wifi_sta_ip"></span>
+            <span class="form-label pr-2" id="wifi_sta_connection_name" data-i18n="wifi.status.wifi_connection"></span><span class="text-muted" id="status_wifi_sta_ip"></span>
         </label>
     </div>
     <div class="col-lg-8 col-xl-4">
         <div class="btn-group flex-wrap" role="group" style="width: 100%">
-            <button id="wifi_sta_not_configured" type="button" class="btn btn-outline-primary" data-i18n="wifi.status.not_configured" disabled>Not configured</button>
-            <button id="wifi_sta_not_connected" type="button" class="btn btn-outline-danger" data-i18n="wifi.status.not_connected" disabled>Not connected</button>
-            <button id="wifi_sta_connecting" type="button" class="btn btn-outline-warning"  data-i18n="wifi.status.connecting" disabled>Connecting</button>
-            <button id="wifi_sta_connected" type="button" class="btn btn-outline-success"  data-i18n="wifi.status.connected" disabled>Connected</button>
+            <button id="wifi_sta_not_configured" type="button" class="btn btn-outline-primary" data-i18n="wifi.status.not_configured" disabled></button>
+            <button id="wifi_sta_not_connected" type="button" class="btn btn-outline-danger" data-i18n="wifi.status.not_connected" disabled></button>
+            <button id="wifi_sta_connecting" type="button" class="btn btn-outline-warning"  data-i18n="wifi.status.connecting" disabled></button>
+            <button id="wifi_sta_connected" type="button" class="btn btn-outline-success"  data-i18n="wifi.status.connected" disabled></button>
         </div>
     </div>
 </div>
@@ -17,17 +17,15 @@
 <div class="form-group row no-gutters">
     <div class="col-sm-4">
         <label for="evse_state_not_connected" class="col-form-label">
-            <span class="form-label" data-i18n="wifi.status.wifi_ap">WiFi Access Point</span>
+            <span class="form-label" data-i18n="wifi.status.wifi_ap"></span>
         </label>
     </div>
     <div class="col-lg-8 col-xl-4">
         <div class="btn-group flex-wrap" role="group" style="width: 100%">
-            <button id="wifi_ap_disabled" type="button" class="btn btn-outline-primary" data-i18n="wifi.status.deactivated" disabled>Deactivated</button>
-            <button id="wifi_ap_enabled" type="button" class="btn btn-outline-success" data-i18n="wifi.status.activated" disabled>Active</button>
-            <button id="wifi_ap_fallback_inactive" type="button" class="btn btn-outline-success" data-i18n="wifi.status.fallback_inactive" disabled>Fallback
-                inactive</button>
-            <button id="wifi_ap_fallback_active" type="button" class="btn btn-outline-danger" data-i18n="wifi.status.fallback_active" disabled>Fallback
-                active</button>
+            <button id="wifi_ap_disabled" type="button" class="btn btn-outline-primary" data-i18n="wifi.status.deactivated" disabled></button>
+            <button id="wifi_ap_enabled" type="button" class="btn btn-outline-success" data-i18n="wifi.status.activated" disabled></button>
+            <button id="wifi_ap_fallback_inactive" type="button" class="btn btn-outline-success" data-i18n="wifi.status.fallback_inactive" disabled></button>
+            <button id="wifi_ap_fallback_active" type="button" class="btn btn-outline-danger" data-i18n="wifi.status.fallback_active" disabled></button>
         </div>
     </div>
 </div>
