wifi, mqtt: Add RSSI staus. Drop "connected to" from status.

--- a/software/modules/frontend/wifi/status.html
+++ b/software/modules/frontend/wifi/status.html
@@ -1,7 +1,7 @@
 <div class="form-group row no-gutters">
-    <div class="col-sm-4">
+    <div class="col-lg-4">
         <label for="wifi_sta_not_configured" class="col-form-label">
-            <span class="form-label pr-2" id="wifi_sta_connection_name" data-i18n="wifi.status.wifi_connection"></span><span class="text-muted" id="status_wifi_sta_ip"></span>
+            <span class="form-label pr-2" id="wifi_sta_connection_name" data-i18n="wifi.status.wifi_connection" style="white-space:nowrap;"></span> <span style="white-space:nowrap;"><span id="status_wifi_sta_rssi" class="form-label pr-2"></span><span id="status_wifi_sta_ip" class="text-muted"></span></span>
         </label>
     </div>
     <div class="col-lg-8 col-xl-4">
@@ -15,7 +15,7 @@
 </div>
 
 <div class="form-group row no-gutters">
-    <div class="col-sm-4">
+    <div class="col-lg-4">
         <label for="evse_state_not_connected" class="col-form-label">
             <span class="form-label" data-i18n="wifi.status.wifi_ap"></span>
         </label>
