--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -64,7 +64,7 @@
             <label for='save_event_log' data-i18n="firmware_update.content.save_event_log_desc" class="mb-3"></label>
         </div>
         <div class="col-lg-12 col-xl-6">
-            <textarea class="text-monospace mb-1" placeholder="Event-Log..." readonly id="event_log" rows="10" style="width: 100%; white-space: pre;" data-i18n="firmware_update.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
+            <textarea class="text-monospace mb-1 form-control" placeholder="Event-Log..." readonly id="event_log" rows="10" style="width: 100%; white-space: pre; line-height: 1.2; text-shadow: none; font-size: 0.875rem;" data-i18n="firmware_update.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
             <label for='event_log' data-i18n="firmware_update.content.event_log"></label>
         </div>
     </div>
