Fix translation errors found with python script.

--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -201,7 +201,7 @@
             <div class="col-lg-9 col-xl-6">
                 <div class="borderless-form-control custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="wifi_ap_hide_ssid">
-                    <label class="custom-control-label" for="wifi_ap_hide_ssid" data-i18n="wifi.content.ap_hide_ssid_desc">
+                    <label class="custom-control-label" for="wifi_ap_hide_ssid">
                         <span data-i18n="wifi.content.ap_hide_ssid_desc_pre"></span><span id="wifi_ap_bssid"></span><span data-i18n="wifi.content.ap_hide_ssid_desc_post"></span>
                     </label>
                 </div>
@@ -222,6 +222,7 @@
                             <input id="wifi_ap_clear_passphrase" type="checkbox" class="custom-control-input" aria-label="Clear passphrase">
                             <label class="custom-control-label" for="wifi_ap_clear_passphrase" style="line-height: 20px;"><span data-feather="trash-2"></span></label>
                         </div>
+                        <div class="invalid-feedback" data-i18n="wifi.content.ap_passphrase_invalid"></div>
                     </div>
                 </div>
             </div>
