--- a/software/modules/frontend/authentication/content.html
+++ b/software/modules/frontend/authentication/content.html
@@ -33,7 +33,7 @@
             <label for="authentication_password" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="authentication.content.password"></label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
-                    <input type="password" id="authentication_password" class="form-control" value="" placeholder="" data-i18n="authentication.content.unchanged" data-i18n-attr="placeholder" maxlength="63"/>
+                    <input type="password" id="authentication_password" class="form-control" value="" maxlength="63"/>
                     <div class="input-group-append">
                         <div class="input-group-text custom-control custom-switch" style="padding-left: 2.5rem;">
                             <input id="authentication_show_password" type="checkbox" class="custom-control-input" aria-label="Show password">
