--- a/software/modules/frontend/mqtt/content.html
+++ b/software/modules/frontend/mqtt/content.html
@@ -48,7 +48,7 @@
             <label for="mqtt_broker_password" class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.password"></label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
-                    <input type="password" id="mqtt_broker_password" class="form-control" value="" placeholder="" data-i18n="mqtt.content.unchanged" data-i18n-attr="placeholder"/>
+                    <input type="password" id="mqtt_broker_password" class="form-control" value=""/>
                     <div class="input-group-append">
                         <div class="input-group-text custom-control custom-switch" style="padding-left: 2.5rem;">
                             <input id="mqtt_show_password" type="checkbox" class="custom-control-input" aria-label="Show password">
