Fix form labels.

--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -61,7 +61,7 @@
         <div id="factory_reset_content" class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <form-label class="modal-title" data-i18n="firmware_update.content.factory_reset"></form-label>
+                    <label class="form-label modal-title" data-i18n="firmware_update.content.factory_reset"></label>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
