--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -291,7 +291,7 @@
         class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <form-label class="modal-title" data-i18n="wifi.content.reboot_title"></form-label>
+                <label class="form-label modal-title" data-i18n="wifi.content.reboot_title"></label>
                 <button type="button" class="close" data-dismiss="modal"
                     aria-label="Close">
                     <span aria-hidden="true">&times;</span>
